@@ -2,6 +2,8 @@ Version 5.12.0 (XXX 2022)
  * Fix crash when using the Atomese dictionary backend.
  * Fix generation tokenization bug when dict has no unknown word token.
  * Major Atomese dictionary extensions, including generation support.
+ * Minor tweaks to `any` uniform random parse tree language.
+ * Include U+202F NARROW NO-BREAK SPACE as a space character.
 
 Version 5.11.0 (27 Sept 2022)
  * Prototype support for dictionary in the AtomSpace.
